adapted AS in the sematics to AS in ch. 9

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6611,6 +6611,7 @@ a new theorem link from this new node to the node $\Name(\syntax{OMSName})$, lab
 the identity morphism on $\Sigma$.
 
 $$sem(\Gamma,\syntax{network-network-entailment, Network$_1$ ,Network$_2$, NodeMap}) = G$$
+\ednote{remove \syntax{NodeMap}}
 
 \noindent where $sem(\Gamma, \syntax{Network}_1) = G_1$,
 $sem(\Gamma, \syntax{Network}_2) = G_2$, 
@@ -6631,7 +6632,7 @@ on $\Sig(N_1)$.
 
 \semdom{sem(\Gamma,\syntax{EquivDefn})=\Gamma'}
 
-$$sem(\Gamma,\syntax{'equiv-defn' , EquivName , ( 'equiv-type' }O_1\ O_2\syntax{ )}\ O_3)=\Gamma'$$
+$$sem(\Gamma,\syntax{'equiv-defn' , EquivName , ( 'oms-equiv' }O_1\ O_2\ O_3\syntax{ )})=\Gamma'$$
 
 \noindent where 
 $\Gamma' = \Gamma[\syntax{EquivName} \mapsto (G, id, N_1, N_2)]$
@@ -6648,6 +6649,9 @@ $\iota_i$ are inclusions and we have that
 $\Inst(O_1) = \Inst(O_2) = \Inst(O_3)$ and 
 for each $i = 1,2$ and each model $M_i \in \Mod(O_i)$ there exists a unique model $M\in \Mod_{(\Sig(O_1)\cup\Sig(O_2),\emptyset)}(O_3)$
 such that $M\forget{\Sig(O_i)} = M_i$. 
+
+$$sem(\Gamma,\syntax{'equiv-defn' , EquivName , ( 'network-equiv' }N_1\ N_2\ N_3\syntax{ )})=\Gamma'$$
+\ednote{todo}
 
 %%%%%%%%%%%%%%%%%%%%%%%%
 \semdom{sem(\Gamma,  \syntax{ModuleRelDefn}) = \Gamma'}
